// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attachments renders attachments 1`] = `
<Screen
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "attachments.dismiss-btn",
        "title": "Done",
      },
    ]
  }
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Add attachment",
        "action": [Function],
        "image": 1,
        "testID": "attachments.add-btn",
      },
    ]
  }
  title="Attachments"
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 49,
      }
    }
  >
    <AttachmentPicker />
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={[Function]}
      data={
        Array [
          Object {
            "cancelled": false,
            "data": Object {
              "display_name": "Book Report",
              "filename": "Attachment 1.jpg",
              "id": "1",
              "mime_class": "document",
              "preview_url": "/",
              "size": 488212,
              "thumbnail_url": "http://fillmurray.com/322/200",
              "uri": "file://somewhere/on/disk.jpg",
              "url": "http://canvaslms.com/bookreport",
            },
            "error": null,
            "progress": 1,
          },
          Object {
            "cancelled": false,
            "data": Object {
              "display_name": "Book Report",
              "filename": "Attachment 1.jpg",
              "id": "2",
              "mime_class": "document",
              "preview_url": "/",
              "size": 488212,
              "thumbnail_url": "http://fillmurray.com/322/200",
              "uri": "file://somewhere/on/disk.jpg",
              "url": "http://canvaslms.com/bookreport",
            },
            "error": null,
            "progress": 1,
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      onViewableItemsChanged={undefined}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      testID="attachments.list.list"
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <AttachmentRow
            onPress={[Function]}
            onRemovePressed={[Function]}
            progress={1}
            testID="attachments.attachment-row.0"
            title="Book Report"
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#C7CDD1",
                  "height": 0.5,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <AttachmentRow
            onPress={[Function]}
            onRemovePressed={[Function]}
            progress={1}
            testID="attachments.attachment-row.1"
            title="Book Report"
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;

exports[`Attachments renders empty state 1`] = `
<Screen
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "attachments.dismiss-btn",
        "title": "Done",
      },
    ]
  }
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Add attachment",
        "action": [Function],
        "image": 1,
        "testID": "attachments.add-btn",
      },
    ]
  }
  title="Attachments"
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 49,
      }
    }
  >
    <AttachmentPicker />
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={[Function]}
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      onViewableItemsChanged={undefined}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      testID="attachments.list.list"
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 400,
                "justifyContent": "center",
                "paddingHorizontal": 50,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "marginBottom": 36,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontSize": 24,
                    "fontWeight": "600",
                    "marginBottom": 4,
                    "textAlign": "center",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              No Attachments
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 16,
                    "textAlign": "center",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Add an attachment by tapping the plus at the top right.
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;
